--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "apexcharts": "^3.54.0",
     "chart.js": "^4.4.3",
     "nuxt": "^3.12.4",
     "vue": "latest"
