--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "apexcharts": "^3.54.0",
-    "chart.js": "^4.4.3",
+    "chart.js": "^4.4.4",
     "nuxt": "^3.12.4",
-    "vue": "latest"
+    "vue": "latest",
+    "vue-chartjs": "^5.3.1"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.12.0"
